[package]
name = "omscli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_memory = "0.12.4"
rmp-serde = "1.1.2"  # MessagePack serialization support for Serde
serde = { version = "1.0", features = ["derive"] }  # Serde serialization framework
centrallib = {path = "../centrallib"}
centralstruct = {path = "../centralstruct"}
nng = "1.0.1"